--- a/biblio.bib
+++ b/biblio.bib
@@ -1263,3 +1263,35 @@ author = {{A. Salam and J.C. Ward}}
       volume          = {2021},
       number ={7}
 }
+@article{ProfileLikelihood,
+	doi = {10.1140/epjc/s10052-011-1554-0},
+	url = {https://doi.org/10.1140%2Fepjc%2Fs10052-011-1554-0},
+	year = 2011,
+	month = {feb},
+	publisher = {{Springer Science and Business Media LLC}},
+	volume = {71},
+	number = {2},
+	author = {{Glen Cowan and Kyle Cranmer and Eilam Gross and Ofer Vitells}},
+	title = {{Asymptotic formulae for likelihood-based tests of new physics}},
+	journal = {The European Physical Journal C}
+}
+@article{WilksTheorem,
+    author = {{Wilks, S. S.}},
+    title = {{The Large-Sample Distribution of the Likelihood Ratio for Testing Composite Hypotheses}},
+    doi = "10.1214/aoms/1177732360",
+    journal = "Annals Math. Statist.",
+    volume = "9",
+    number = "1",
+    pages = "60--62",
+    year = "1938"
+}
+@techreport{Bootstrapping,
+      collaboration = "{ATLAS}",
+      title         = "{Evaluating statistical uncertainties and correlations
+                       using the bootstrap method}",
+      institution   = "CERN",
+      reportNumber  = "ATL-PHYS-PUB-2021-011",
+      address       = "Geneva",
+      year          = "2021",
+      url           = "https://cds.cern.ch/record/2759945",
+}
