--- a/sections/theory_StandardModel.tex
+++ b/sections/theory_StandardModel.tex
@@ -115,13 +115,13 @@ Relativistic quantum field theory is the theoretical framework of the SM that de
 
 \subsubsection{Lagrangian of the Standard Model}
 \label{subsubsec:SMLag}
-The compact Lagrangian density given in equation \ref{eqn:SMLagrangian} describes the dynamics of the SM and is invariant under the local gauge transformation of the $SU(3)_{C}~\otimes~SU(2)_{L}~\otimes~U(1)_{Y}$ symmetry group. 
+The compact Lagrangian density given in Equation \ref{eqn:SMLagrangian} describes the dynamics of the SM and is invariant under the local gauge transformation of the $SU(3)_{C}~\otimes~SU(2)_{L}~\otimes~U(1)_{Y}$ symmetry group. 
 \begin{equation}
 \mathcal{L_{SM}} = -\frac{1}{4}F_{\mu\nu}F^{\mu\nu} ~+~ i\bar{\psi}\gamma^{\mu}D_{\mu}\psi ~+~ |D_{\mu}\phi|^{2} ~-~V(\phi) + \bar{\psi_{i}}y_{ij}\psi_{j}\phi ~+~ h.c.
 \label{eqn:SMLagrangian}
 \end{equation}
 
-The first term $-\frac{1}{4}F_{\mu\nu}F^{\mu\nu}$ describes the dynamics of the gauge boson interactions, the second term $i\bar{\psi}\gamma^{\mu}D_{\mu}\psi$ describes the interaction of the fermion fields. The third term $|D_{\mu}\phi|^{2}$ describes the couplings between the Higgs boson and gauge bosons, whereas the term $V(\phi)$ represents the Higgs potential and its self-interactions. The second last term $\bar{\psi_{i}}y_{ij}\psi_{j}\phi$ generates masses for fermions based on their Yukawa couplings $y_{ij}$ to the Higgs field. Similarly, the last term $h.c.$ generates masses for anti-fermions. In reality, the SM lagrangian density, as shown by equation \ref{eqn:SMLagrangian}, is a combination of complex interactions that follow different types of local gauge symmetries, and concise derivations of different interactions are discussed individually in the following few sections.
+The first term $-\frac{1}{4}F_{\mu\nu}F^{\mu\nu}$ describes the dynamics of the gauge boson interactions, the second term $i\bar{\psi}\gamma^{\mu}D_{\mu}\psi$ describes the interaction of the fermion fields. The third term $|D_{\mu}\phi|^{2}$ describes the couplings between the Higgs boson and gauge bosons, whereas the term $V(\phi)$ represents the Higgs potential and its self-interactions. The second last term $\bar{\psi_{i}}y_{ij}\psi_{j}\phi$ generates masses for fermions based on their Yukawa couplings $y_{ij}$ to the Higgs field. Similarly, the last term $h.c.$ generates masses for anti-fermions. In reality, the SM lagrangian density, as shown by Equation \ref{eqn:SMLagrangian}, is a combination of complex interactions that follow different types of local gauge symmetries, and concise derivations of different interactions are discussed individually in the following few sections.
  
 \subsubsection{Quantum Electrodynamics}
 \label{subsubsec:QED}
@@ -133,7 +133,7 @@ Quantum electrodynamics describes the electromagnetic interaction. The Dirac Lag
 \end{equation}
 where $\psi$ is the fermionic spinor, $\gamma^{\mu}$ represents the Dirac matrices with $\mu$ being the Lorentz index running from $0$ to $3$, and m is the mass of the fermion. 
 
-The Lagrangian in equation \ref{eqn:DiracLag} is invariant under a $U(1)$ global gauge transformation, 
+The Lagrangian in Equation \ref{eqn:DiracLag} is invariant under a $U(1)$ global gauge transformation, 
 \begin{equation}
 \psi\rightarrow \psi^{'}=e^{iq\alpha}\psi 
 \label{eqn:QEDGlobalTrans}
@@ -144,9 +144,9 @@ where q is a parameter of the transformation itself and $\alpha$ is a real phase
 \psi\rightarrow \psi^{'}=e^{iq\alpha(x)}\psi
 \label{eqn:QEDLocalTrans}
 \end{equation}
-where $\alpha$ depends on $x~=~(x_{0},x_{1},x_{2},t)$ the Dirac Lagrangian in equation \ref{eqn:DiracLag} is not invariant. 
+where $\alpha$ depends on $x~=~(x_{0},x_{1},x_{2},t)$ the Dirac Lagrangian in Equation \ref{eqn:DiracLag} is not invariant. 
 
-To make the Lagrangian of equation \ref{eqn:DiracLag} invariant, a gauge field $A_{\mu}$ with the following transformation properties is introduced, 
+To make the Lagrangian of Equation \ref{eqn:DiracLag} invariant, a gauge field $A_{\mu}$ with the following transformation properties is introduced, 
 
 \begin{equation}
 A_{\mu}\rightarrow A_{\mu} - \partial _{\mu} \alpha
@@ -158,7 +158,7 @@ $A_{\mu}$ couples to fermionic fields $\psi(x,t)$ with strength q. A covariant d
 D_{\mu} = \partial_{\mu} - iqA_{\mu}
 \label{eqn:QEDCovDerv}
 \end{equation}  
-The quantity $q$ can be interpreted as the electric charge $-e$ of fermion, which gives the coupling strength of QED. With these substitutions, the Dirac Lagrangian in equation \ref{eqn:DiracLag} changes to the following
+The quantity $q$ can be interpreted as the electric charge $-e$ of fermion, which gives the coupling strength of QED. With these substitutions, the Dirac Lagrangian in Equation \ref{eqn:DiracLag} changes to the following
 
 \begin{equation}
 \mathcal{L} = \bar{\psi} ( i \gamma^{\mu} D_{\mu} ~-~ m) \psi
@@ -173,14 +173,14 @@ F_{\mu\nu} = \partial_{\mu}A_{\nu} - \partial_{\nu}A_{\mu}
 \label{QEDFieldTensor}
 \end{equation}
 
-The gauge invariant kinetic term of photon $-\frac{1}{4}F_{\mu\nu}F^{\mu\nu}$ can be inserted into the Lagrangian in equation \ref{eqn:QEDInvLag} which gives us the full Lagrangian of QED invariant under $U(1)$ gauge transformation. 
+The gauge invariant kinetic term of photon $-\frac{1}{4}F_{\mu\nu}F^{\mu\nu}$ can be inserted into the Lagrangian in Equation \ref{eqn:QEDInvLag} which gives us the full Lagrangian of QED invariant under $U(1)$ gauge transformation. 
 
 \begin{equation}
 \mathcal{L}_{QED} = -\frac{1}{4}F_{\mu\nu}F^{\mu\nu} + \bar{\psi} ( i \gamma^{\mu} D_{\mu} ~-~ m) \psi
 \label{eqn:QEDFullLag}
 \end{equation}
 
-$\mathcal{L}_{QED}$ in equation \ref{eqn:QEDFullLag} is the full Lagrangian for QED, and the electromagnetic phenomena can be derived by solving for the equations of motion applying the Lorentz gauge condition $\partial_{\mu}A^{\mu}=0$. A small dimensionless coupling constant $\alpha$ determines the relative strength of the QED interactions. The probability of particle interactions and decay rates can be calculated as the square modulus of a perturbative series in powers of $\alpha$. The value of $\alpha$ depends on the energy scale because of the additional contributions from the vacuum polarization of virtual quark and virtual lepton loop corrections. For a given momentum transfer squared $q^2$ of the exchanged photon, the effective coupling constant depends on the $\alpha_{0} = \frac{e^2}{4\pi}$ with zero momentum transfer as, 
+$\mathcal{L}_{QED}$ in Equation \ref{eqn:QEDFullLag} is the full Lagrangian for QED, and the electromagnetic phenomena can be derived by solving for the equations of motion applying the Lorentz gauge condition $\partial_{\mu}A^{\mu}=0$. A small dimensionless coupling constant $\alpha$ determines the relative strength of the QED interactions. The probability of particle interactions and decay rates can be calculated as the square modulus of a perturbative series in powers of $\alpha$. The value of $\alpha$ depends on the energy scale because of the additional contributions from the vacuum polarization of virtual quark and virtual lepton loop corrections. For a given momentum transfer squared $q^2$ of the exchanged photon, the effective coupling constant depends on the $\alpha_{0} = \frac{e^2}{4\pi}$ with zero momentum transfer as, 
 \begin{equation}
     \alpha(q^2) = \frac{\alpha_{0} (q^2=0)}{1-\Delta \alpha(q^2)}
 \end{equation}
@@ -208,7 +208,7 @@ The local $SU(3)$ gauge transformation is
 q(x) \rightarrow e^{i \alpha_a(x) T_{a}} q(x)
 \label{eqn:QCDSU3LT}
 \end{equation}
-where $T_{a} = \frac{\lambda_{a}}{2}$, and $a = {1,2...8}$. To understand the source of gauge invariance in the Lagrangian of equation \ref{eqn:QCDStartL}, an infinitesimal transformation of the color field is considered as
+where $T_{a} = \frac{\lambda_{a}}{2}$, and $a = {1,2...8}$. To understand the source of gauge invariance in the Lagrangian of Equation \ref{eqn:QCDStartL}, an infinitesimal transformation of the color field is considered as
 
 \begin{equation}
 q(x) \rightarrow [ 1 + i\alpha_{a}(x)T_{a}]q(x) \\
@@ -227,13 +227,13 @@ D_{\mu} = \partial_{\mu} + ig_{s}\frac{\lambda_{a}}{2}G_{\mu}^{a}
 \end{equation}
 where $g_{s}$ is the coupling strength of the gluon fields to the quark fields.
 
-The Lagrangian density in equation \ref{eqn:QCDStartL} is then 
+The Lagrangian density in Equation \ref{eqn:QCDStartL} is then 
 \begin{equation}
 \mathcal{L} = \bar{q_{j}}(i\gamma^{\mu}D_{\mu} - m )q_{j}
 \label{eqn:QCDInvLag}
 \end{equation}
 
-Similar to QED, a gauge-invariant kinetic term $-\frac{1}{4}G^{a}_{\mu\nu}G^{\mu\nu}_{a}$, dependent on the field strength tensor $G^{a}_{\mu\nu}$ is added to equation \ref{eqn:QCDInvLag} to give the full QCD Lagrangian. The kinetic terms allow self-interaction within the gluon fields, which is an important feature of QCD. $G^{a}_{\mu\nu}$ is the field strength tensor defined as
+Similar to QED, a gauge-invariant kinetic term $-\frac{1}{4}G^{a}_{\mu\nu}G^{\mu\nu}_{a}$, dependent on the field strength tensor $G^{a}_{\mu\nu}$ is added to Equation \ref{eqn:QCDInvLag} to give the full QCD Lagrangian. The kinetic terms allow self-interaction within the gluon fields, which is an important feature of QCD. $G^{a}_{\mu\nu}$ is the field strength tensor defined as
 
 \begin{equation}
 G^{a}_{\mu\nu} = \partial_{\mu}G^{a}_{\nu} - \partial_{\nu}G^{a}_{\mu} - g_{s}f_{abc}G^{b}_{\mu}G^{c}_{\nu}
@@ -290,9 +290,9 @@ B_{\mu\nu} = \partial_{\mu}B_{\nu} - \partial_{\nu}B_{\mu}
 W_{\mu\nu}^{a} = \partial_{\mu}W_{\nu}^{a} - \partial_{\nu}W_{\mu}^{a} + g\epsilon^{abc}W_{\mu}^{b}W_{\nu}^{c}
 \label{eqn:SU2FST}
 \end{equation}
-The non-Abelian part of the $SU(2)_{L}$ transformation is represented by the last term of equation \ref{eqn:SU2FST}, which gives the quartic and triple self-interactions between the gauge bosons with coupling strength $g$. 
+The non-Abelian part of the $SU(2)_{L}$ transformation is represented by the last term of Equation \ref{eqn:SU2FST}, which gives the quartic and triple self-interactions between the gauge bosons with coupling strength $g$. 
 
-The electroweak Lagrangian in equation \ref{eqn:EWKLagrangian1} contains two terms, one of which gives rise to the charged-current interaction with the two $SU(2)$ boson field 
+The electroweak Lagrangian in Equation \ref{eqn:EWKLagrangian1} contains two terms, one of which gives rise to the charged-current interaction with the two $SU(2)$ boson field 
 
 \begin{equation}
 W^{\pm}_{\mu} ~=~ \frac{ W^{1}_{\mu} \mp iW^{2}_{\mu} } {\sqrt(2)}
@@ -331,7 +331,7 @@ where $T_{3}=\frac{\tau_{3}}{2}$ is the weak isospin and $\theta_{W}$ is the Wei
 
 Similar to QED and QCD, the probability of particle interactions and decay rates in electroweak interactions can be calculated as the square-modulus of a perturbative series in powers of the weak coupling constant $\alpha _{EWK}$. The value of $\alpha _{EWK}$ depends on the energy scale and the type of weak interaction, charged-current, neutral-current, or the non-Abelian self-couplings of the gauge bosons. 
 
-The Lagrangian in equation \ref{eqn:EWKLagrangian1} describes the electroweak interactions only for massless fermions and massless gauge bosons, which contradicts the experimental observations. The mass origin of the fermions and gauge bosons is discussed below in Section \ref{subsubsec:HiggsMech}. 
+The Lagrangian in Equation \ref{eqn:EWKLagrangian1} describes the electroweak interactions only for massless fermions and massless gauge bosons, which contradicts the experimental observations. The mass origin of the fermions and gauge bosons is discussed below in Section \ref{subsubsec:HiggsMech}. 
 
 \subsubsection{Higgs Mechanism}
 \label{subsubsec:HiggsMech}
@@ -363,7 +363,7 @@ For $\mu^2 > 0$, the scalar field develops a nonzero Vacuum Expectation Value (V
 \end{equation}
 where the Higgs field ($H$) emerges as the excitation from the vacuum state, this choice of the minimum spontaneously breaks the gauge symmetry \cite{DESYHiggsLecture}. 
 
-After substituting the $\phi$ in the Lagrangian in equation \ref{eqn:LagBEH}, the kinetic term takes the form
+After substituting the $\phi$ in the Lagrangian in Equation \ref{eqn:LagBEH}, the kinetic term takes the form
 
 \begin{equation}
 \begin{array}{l}
@@ -375,10 +375,10 @@ After substituting the $\phi$ in the Lagrangian in equation \ref{eqn:LagBEH}, th
 \end{equation}
 where the first line is the vacuum energy density and can be ignored in the case of QFT. The second line describes the triple and quartic self-interactions of the Higgs field as well as the mass term of the real scalar field H as $m_{H} = 2\lambda v^2$. The last line contains the mass term for the vector bosons. 
 
-From equations \ref{eqn:LagBEHKin} and \ref{eqn:RealWBosons} is evident the mass of the two charged vector bosons $W^{\pm}$ is $m_{W}=\frac{1}{2}g^2v^2$. Similarly, from equations \ref{eqn:LagBEHKin} and 
+From Equations \ref{eqn:LagBEHKin} and \ref{eqn:RealWBosons} is evident the mass of the two charged vector bosons $W^{\pm}$ is $m_{W}=\frac{1}{2}g^2v^2$. Similarly, from Equations \ref{eqn:LagBEHKin} and 
 \ref{eqn:NeutralGaugeBosons}, mass of the $Z$ boson is $m_{Z} = \frac{1}{2}(g^2+g^{'})v^2$ and mass of the photon is $m_{\gamma}=0$. 
 
-The initial $SU(2)_{L}$ Lagrangian in equation \ref{eqn:LagBEH} started with four gauge symmetries, which is reduced to a single $U(1)_{Q}$ gauge symmetry associated with the massless vector field in equation \ref{eqn:LagBEHKin}. This phenomenon in the Higgs mechanism is called the Electroweak Symmetry Breaking (EWSB) mechanism. As discussed above, the EWSB mechanism is at the heart of the SM by which the gauge boson gets the mass which also gives rise to the longitudinal polarization of the massive vector bosons. This thesis summarizes a measurement with an experimental sensitivity to a such important property of the theory.
+The initial $SU(2)_{L}$ Lagrangian in Equation \ref{eqn:LagBEH} started with four gauge symmetries, which is reduced to a single $U(1)_{Q}$ gauge symmetry associated with the massless vector field in Equation \ref{eqn:LagBEHKin}. This phenomenon in the Higgs mechanism is called the Electroweak Symmetry Breaking (EWSB) mechanism. As discussed above, the EWSB mechanism is at the heart of the SM by which the gauge boson gets the mass which also gives rise to the longitudinal polarization of the massive vector bosons. This thesis summarizes a measurement with an experimental sensitivity to a such important property of the theory.
 
 The last remaining piece in the SM is adding the fermion mass to the Lagrangian. A simple Lagrangian with the fermion mass can be written as, 
 \begin{equation}
@@ -398,4 +398,4 @@ Similarly, the mass terms for quarks follow but including the down-type quarks, 
 \label{eqn:YukawaQuarkMass}
 \end{equation}
 
-The final Standard Model Lagrangian is the sum of the QED (equation \ref{eqn:QEDFullLag}), QCD (equation \ref{eqn:QCDCompleteLag}), electroweak interactions including the self-interactions of vector bosons (equation \ref{eqn:EWKLagrangian1}), Higgs potential, Higgs self-interactions, and Higgs-vector boson interactions ( equation \ref{eqn:LagBEH}), and the Higgs-fermion Yukawa coupling (equations \ref{eqn:YukawaLepMass} $\&$ \ref{eqn:YukawaQuarkMass}), which in compact form is written as equation \ref{eqn:SMLagrangian}. The final electroweak theory of SM with massive gauge bosons tightly constrains the W, Z, and Higgs interactions, their masses, and the self-couplings of gauge bosons in terms of a few parameters. Any deviations from predictions indicate the presence of physics beyond the SM, thus, losing the mathematical underpinnings of the theory. Therefore, this thesis targets precision measurement of the electroweak sector to detect possible deviations caused by BSM effects.
+The final Standard Model Lagrangian is the sum of the QED (Equation \ref{eqn:QEDFullLag}), QCD (Equation \ref{eqn:QCDCompleteLag}), electroweak interactions including the self-interactions of vector bosons (Equation \ref{eqn:EWKLagrangian1}), Higgs potential, Higgs self-interactions, and Higgs-vector boson interactions ( Equation \ref{eqn:LagBEH}), and the Higgs-fermion Yukawa coupling (Equations \ref{eqn:YukawaLepMass} $\&$ \ref{eqn:YukawaQuarkMass}), which in compact form is written as Equation \ref{eqn:SMLagrangian}. The final electroweak theory of SM with massive gauge bosons tightly constrains the W, Z, and Higgs interactions, their masses, and the self-couplings of gauge bosons in terms of a few parameters. Any deviations from predictions indicate the presence of physics beyond the SM, thus, losing the mathematical underpinnings of the theory. Therefore, this thesis targets precision measurement of the electroweak sector to detect possible deviations caused by BSM effects.
