--- a/sections/theory_EWkProcess.tex
+++ b/sections/theory_EWkProcess.tex
@@ -51,7 +51,7 @@ As discussed in Section \ref{subsubsec:HiggsMech}, the massive $W$ and $Z$ boson
 \label{fig:ZZjjFeynmanDiag_EWk}
 \end{figure}
 
-The triple and quartic self-interactions of the gauge bosons arise from the square of the non-Abelian structure of $SU(2)$ in the kinetic term $ \frac{1}{4} W^{a}_{\mu\nu} W^{\mu\nu}_{a}$ of the EWK Lagrangian in equation \ref{eqn:EWKLagrangian1}. Implementing the values of the field strength tensor $W^{a}_{\mu\nu}$ from equation \ref{eqn:SU2FST}, the relations of $W_{\mu}^{\pm}$ fields in equation \ref{eqn:RealWBosons}, and the relations of neutral gauge fields in equation \ref{eqn:NeutralGaugeBosons}, the triple and quartic self interaction terms become, 
+The triple and quartic self-interactions of the gauge bosons arise from the square of the non-Abelian structure of $SU(2)$ in the kinetic term $ \frac{1}{4} W^{a}_{\mu\nu} W^{\mu\nu}_{a}$ of the EWK Lagrangian in Equation \ref{eqn:EWKLagrangian1}. Implementing the values of the field strength tensor $W^{a}_{\mu\nu}$ from Equation \ref{eqn:SU2FST}, the relations of $W_{\mu}^{\pm}$ fields in Equation \ref{eqn:RealWBosons}, and the relations of neutral gauge fields in Equation \ref{eqn:NeutralGaugeBosons}, the triple and quartic self interaction terms become, 
 \begin{equation}
 \mathcal{L}_{3} = ie_{V=\gamma,Z} [ W^{+}_{\mu\nu} W^{-\mu} V^{\nu} - W^{-}_{\mu\nu} W^{+\mu} V^{\nu} + W_{\mu}^{+}W_{\nu}^{-}V^{\mu\nu} ] 
 \label{eqn:L_TGC}
@@ -66,7 +66,7 @@ The triple and quartic self-interactions of the gauge bosons arise from the squa
 \end{equation}
 where, $e_{\gamma} = g\sin\theta_{W}$; $e_{W} = \frac{e_{\gamma}}{2\sqrt{2}\sin\theta_{W}}$ $\&$ $e_{Z} = e_{\gamma}\cot\theta_{W}$ are the precise coupling strengths for vector boson self-interaction. Both triple and quartic neutral couplings, such as $ZZZ$ or $ZZZZ$ are absent in the SM. 
 
-Similarly, the couplings of Higgs to vector bosons are also predicted precisely by the BEH mechanism in equation \ref{eqn:LagBEHKin} as:
+Similarly, the couplings of Higgs to vector bosons are also predicted precisely by the BEH mechanism in Equation \ref{eqn:LagBEHKin} as:
 
 \begin{equation}
 \mathcal{L}_{HVV} = \frac{m_{W}^2}{v^2} W^{+}_{\mu}W^{-\mu}h^{2} + \frac{m_{Z}^{2}}{v^2} Z_{\mu}Z^{\mu}h^{2}
